--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 					<div id="intro">
 						<h1>Dan Firmin</h1>
 						<h2>Analyst Portfolio</h2>
-						<p>Experienced finance professional with a passion for data analytics<br>
-						Advanced Excel | SQL | R | Tableau - learning Python & Power BI<br>    
+						<p>Experienced finance professional with a passion for data analytics<br />
+						Advanced Excel | SQL | R | Tableau - learning Python & Power BI<br />    
 						Problem solving | Stakeholder Management | Communication | Collaboration | Presentation
 						</p>
 						<ul class="actions">  
